fix: update Azure AI Foundry task support
Signed-off-by: Hemant M Mehta <hemant29mehta@gmail.com>